Clean up assemblies Correct project metadata in POM First part of moving installer to new project layout
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2716 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>edu.internet2.middleware</groupId>
+            <artifactId>ant-extensions</artifactId>
+            <version>13Apr2008</version>
+            <scope>runtime</scope>
+        </dependency>
         
         <!-- Test dependencies -->
         <dependency>
@@ -134,6 +140,18 @@
             <artifactId>xmlunit</artifactId>
             <version>1.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-mock</artifactId>
+            <version>2.0.8</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     
@@ -308,7 +326,7 @@
     </profiles>
     
     <!-- Project Metadata -->
-    <url>https://opensaml.org/</url>
+    <url>https://shibboleth.internet2.edu/</url>
     
     <inceptionYear>2006</inceptionYear>
     
@@ -332,22 +350,33 @@
     
     <mailingLists>
         <mailingList>
-            <name>OpenSAML Users</name>
-            <subscribe>https://spaces.internet2.edu/display/OpenSAML/MailingList</subscribe>
-            <unsubscribe>https://spaces.internet2.edu/display/OpenSAML/MailingList</unsubscribe>
-            <post>mace-opensaml-users@internet2.edu</post>
-            <archive>https://mail.internet2.edu/wws/arc/mace-opensaml-users</archive>
-            <otherArchives>
-                <otherArchive>http://groups.google.com/group/opensaml-users</otherArchive>
-            </otherArchives>
+            <name>Shibboleth Announce</name>
+            <subscribe>http://shibboleth.internet2.edu/support.html#lists</subscribe>
+            <unsubscribe>http://shibboleth.internet2.edu/support.html#lists</unsubscribe>
+            <post>shibboleth-announce@internet2.edu</post>
+            <archive>https://mail.internet2.edu/wws/arc/shibboleth-announce</archive>
+        </mailingList>
+        <mailingList>
+            <name>Shibboleth Users</name>
+            <subscribe>http://shibboleth.internet2.edu/support.html#lists</subscribe>
+            <unsubscribe>http://shibboleth.internet2.edu/support.html#lists</unsubscribe>
+            <post>shibboleth-users@internet2.edu</post>
+            <archive>https://mail.internet2.edu/wws/arc/shibboleth-users</archive>
+        </mailingList>
+        <mailingList>
+            <name>Shibboleth Development</name>
+            <subscribe>http://shibboleth.internet2.edu/support.html#lists</subscribe>
+            <unsubscribe>http://shibboleth.internet2.edu/support.html#lists</unsubscribe>
+            <post>shibboleth-dev@internet2.edu</post>
+            <archive>https://mail.internet2.edu/wws/arc/shibboleth-dev</archive>
         </mailingList>
     </mailingLists>
     
     <scm>
-        <connection>scm:svn:https://svn.middleware.georgetown.edu/java-xmltooling/</connection>
-        <developerConnection>scm:svn:https://svn.middleware.georgetown.edu/java-xmltooling/</developerConnection>
+        <connection>scm:svn:https://svn.middleware.georgetown.edu/java-idp/</connection>
+        <developerConnection>scm:svn:https://svn.middleware.georgetown.edu/java-idp/</developerConnection>
         <tag>HEAD</tag>
-        <url>http://svn.middleware.georgetown.edu/view/?root=java-xmltooling</url>
+        <url>http://svn.middleware.georgetown.edu/view/?root=java-idp</url>
     </scm>
     
     <developers>
