--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
 
-    <display-name>Shibboleth $IDP_VERSION$ Identity Provider</display-name>
+    <display-name>Shibboleth Identity Provider</display-name>
 
     <!--
         Spring 2.0 application context files.  Files are loaded in the order they appear with subsequent files 
@@ -12,7 +12,7 @@
     -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>file://$IDP_HOME$/conf/internal.xml; file://$IDP_HOME$/conf/service.xml;</param-value>
+        <param-value>$IDP_HOME$/conf/internal.xml; $IDP_HOME$/conf/service.xml;</param-value>
     </context-param>
 
     <!-- Spring 2.0 listener used to load up the configuration -->
