Properly set useKeyTab property; SIDP-176
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2725 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/installer/resources/conf-tmpl/login.config
+++ b/src/installer/resources/conf-tmpl/login.config
@@ -38,6 +38,7 @@ ShibUserPassAuth {
 // See: https://spaces.internet2.edu/display/SHIB2/IdPAuthUserPass
 /*
    com.sun.security.auth.module.Krb5LoginModule required
+      useKeyTab="true"
       keyTab="/path/to/idp/keytab/file";
 */
 
