Add default security role so Tomcat stops bitching: SIDP-175
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2733 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,10 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    
+    <listener>
+        <listener-class>edu.internet2.middleware.shibboleth.idp.session.ContainerSessionListener</listener-class>
+    </listener>
 
     <!--  Add IdP Session object to incoming profile requests -->
     <filter>
@@ -102,6 +106,10 @@
             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
     </security-constraint>
+    
+    <security-role>
+      <role-name>user</role-name>
+    </security-role> 
 -->
 
 <!-- Uncomment if you want BASIC auth managed by the container -->
