Ask for fully qualified host name during installation to address issue where people enter "localhost": SIDP-173
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2734 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/installer/resources/build.xml
+++ b/src/installer/resources/build.xml
@@ -32,7 +32,7 @@
                 <pathToAbsolutePath path="${idp.home}" addproperty="idp.home.path" />
                 <pathToUrl path="${idp.home}" addproperty="idp.home.url" />
 
-                <input message="What is the hostname of the Shibboleth Identity Provider server?"
+                <input message="What is the fully qualified hostname of the Shibboleth Identity Provider server?"
                        addproperty="idp.hostname.input"
                        defaultvalue="${idp.hostname}" />
                 <var name="idp.hostname" value="${idp.hostname.input}" />
