Include Shib JCE extensions in distribution - SIDP-215
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2765 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,18 @@
             <version>13Apr2008</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>edu.internet2.middleware</groupId>
+            <artifactId>shibboleth-jce</artifactId>
+            <version>1.0.0</version>
+            <scope>runtime</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>tomcat</groupId>
+                    <artifactId>catalina</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         
         <!-- Test dependencies -->
         <dependency>
