only apply session filter to profile requests
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2790 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
     
     <filter-mapping>
         <filter-name>IdPSessionFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/profile/*</url-pattern>
     </filter-mapping>
 
     <!-- Profile Request Dispatcher -->
