Ensure the servlet API (needed by the aacli) is on the classpath but not within the WAR
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2799 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/installer/resources/build.xml
+++ b/src/installer/resources/build.xml
@@ -169,7 +169,7 @@
 
         <!-- build the war file -->
         <war warfile="${installer.dir}/${war.name}.war" webxml="${installer.dir}/web.xml">
-            <lib dir="${basedir}/lib" />
+            <lib dir="${basedir}/lib" excludesfile="servlet-api*.jar"/>
             <webinf dir="${webapp.dir}/WEB-INF" excludes="web.xml" />
             <fileset dir="${webapp.dir}" excludes="WEB-INF/**" />
         </war>
