--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,14 @@
         </dependency>
         
         <!-- Provided dependencies -->
+                
+        <!-- Runtime dependencies -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.4</version>
-            <scope>provided</scope>
+            <scope>runtime</scope>
         </dependency>
-                
-        <!-- Runtime dependencies -->
         <dependency>
             <groupId>org.apache.xerces</groupId>
             <artifactId>xml-apis</artifactId>
