--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -96,7 +96,7 @@
             <http-method>POST</http-method>
         </web-resource-collection>
         <auth-constraint> 
-            <role-name>users</role-name> 
+            <role-name>user</role-name> 
         </auth-constraint>
         <user-data-constraint>
             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
