--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,7 @@
     <servlet>
         <servlet-name>ProfileRequestDispatcher</servlet-name>
         <servlet-class>edu.internet2.middleware.shibboleth.common.profile.ProfileRequestDispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
@@ -46,6 +47,7 @@
     <servlet>
         <servlet-name>AuthenticationEngine</servlet-name>
         <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.AuthenticationEngine</servlet-class>
+        <load-on-startup>2</load-on-startup>
     </servlet>
 
     <servlet-mapping>
@@ -57,6 +59,7 @@
     <servlet>
         <servlet-name>RemoteUserAuthHandler</servlet-name>
         <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.RemoteUserAuthServlet</servlet-class>
+        <load-on-startup>3</load-on-startup>
     </servlet>
 
     <servlet-mapping>
@@ -68,6 +71,7 @@
     <servlet>
         <servlet-name>UsernamePasswordAuthHandler</servlet-name>
         <servlet-class>edu.internet2.middleware.shibboleth.idp.authn.provider.UsernamePasswordLoginServlet</servlet-class>
+        <load-on-startup>4</load-on-startup>
     </servlet>
 
     <servlet-mapping>
