make sure old library versions are properly cleaned out of IDP_HOME/lib - SIDP-259
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2818 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/installer/resources/build.xml
+++ b/src/installer/resources/build.xml
@@ -149,10 +149,12 @@
                             
         <chmod file="${idp.home.path}/bin/*.sh" perm="+x" />
 
+    	<delete>
+    	    <fileset dir="${idp.home.path}/lib" includes="**/*.jar" />
+        </delete>
         <copy todir="${idp.home.path}/lib" preservelastmodified="true" overwrite="true">
             <fileset dir="${basedir}/lib" />
         </copy>
-
         <copy todir="${idp.home.path}/lib/endorsed" preservelastmodified="true" failonerror="false" overwrite="true">
             <fileset dir="endorsed" />
         </copy>
