Make IdP display its metadata when you hit the entity ID URL - SIDP-268
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2823 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,17 @@
         <servlet-name>ProfileRequestDispatcher</servlet-name>
         <url-pattern>/profile/*</url-pattern>
     </servlet-mapping>
+    
+    <!-- Send request to the EntityID to the SAML metadata handler. -->
+    <servlet>
+        <servlet-name>shibboleth_jsp</servlet-name>
+        <jsp-file>/shibboleth.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>shibboleth_jsp</servlet-name>
+        <url-pattern>/shibboleth</url-pattern>
+    </servlet-mapping> 
 
     <!-- Authentication Engine Entry Point -->
     <servlet>
