Initial work on new Status handler - SIDP-324
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2853 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,17 @@
         <url-pattern>/profile/*</url-pattern>
     </servlet-mapping>
     
+    <servlet>
+        <servlet-name>Status</servlet-name>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.StatusServlet</servlet-class>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Status</servlet-name>
+        <url-pattern>/status</url-pattern>
+    </servlet-mapping>
+    
     <!-- Send request to the EntityID to the SAML metadata handler. -->
     <servlet>
         <servlet-name>shibboleth_jsp</servlet-name>
