Parameterize release repository URL
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2863 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,13 @@
     
     <distributionManagement>
         <repository>
-            <id>ssh-repository</id>
-            <url>scpexe://www.internet2.edu/home/htdocs/shibboleth.internet2.edu/downloads/maven2</url>
+            <id>release-repo</id>
+            <url>${dist.release.url}</url>
         </repository>
+        <snapshotRepository>
+            <id>snapshot-repo</id>
+            <url>${dist.snapshot.url}</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <dependencies>
