--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
                     <debug>true</debug>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -183,7 +183,7 @@
                 <configuration>
                   <argLine>-Xmx256m</argLine>
                 </configuration>
-            </plugin>
+            </plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
